--- a/graph/papers.html
+++ b/graph/papers.html
@@ -41,7 +41,7 @@
     }  
 
     const Graph = new ForceGraph3D(document.getElementById('3d-graph'))
-        .jsonUrl('paper_graph.json')
+        .jsonUrl('papers.json')
         .nodeAutoColorBy('cluster')
         .nodeThreeObject(node => {
   
@@ -75,7 +75,27 @@
           group.add(sprite);
 
           return group;})
-        .nodeThreeObjectExtend(true);
+        .nodeThreeObjectExtend(true)
+        .onNodeClick(node => {
+          // Aim at node from outside it
+          const distance = 40;
+          const distRatio = 1 + distance/Math.hypot(node.x, node.y, node.z);
+
+          const newPos = node.x || node.y || node.z
+            ? { x: node.x * distRatio, y: node.y * distRatio, z: node.z * distRatio }
+            : { x: 0, y: 0, z: distance }; // special case if node is in (0,0,0)
+
+          Graph.cameraPosition(
+            newPos, // new position
+            node, // lookAt ({ x, y, z })
+            3000  // ms transition duration
+          );
+        });
+    
+    Graph.d3VelocityDecay(.7); // more damping, gentler motion
+    Graph.d3AlphaDecay(0.0);   // cool the simulation more slowly
+    Graph.cooldownTime(15000);  // keep forces running longer but at a slower pace
+      
     Graph.d3Force('charge').strength(-120);
 
   </script>
